# airbrush

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
airbrush/: all.html  enum.CanvasSpace.html  enum.Distribution.html  enum.WorldSpace.html  index.html  sidebar-items.js  struct.Droplet.html  struct.RenderConfig.html  struct.Renderer.html  struct.StreamingPath.html  trait.Path.html  type.Coordinate.html
bytemuck/: all.html  index.html
crossbeam_channel/: struct.IntoIter.html  struct.Iter.html  struct.TryIter.html
euclid/: all.html  fn.box3d.html  fn.bvec2.html  fn.bvec3.html  fn.point2.html  fn.point3.html  fn.rect.html  fn.size2.html  fn.size3.html  fn.vec2.html  fn.vec3.html  index.html  sidebar-items.js  struct.Angle.html  struct.BoolVector2D.html  struct.BoolVector3D.html  struct.Box2D.html  struct.Box3D.html  struct.HomogeneousVector.html  struct.Length.html  struct.Point2D.html  struct.Point3D.html  struct.Rect.html  struct.RigidTransform3D.html  struct.Rotation2D.html  struct.Rotation3D.html  struct.Scale.html  struct.SideOffsets2D.html  struct.Size2D.html  struct.Size3D.html  struct.Transform2D.html  struct.Transform3D.html  struct.Translation2D.html  struct.Translation3D.html  struct.UnknownUnit.html  struct.Vector2D.html  struct.Vector3D.html  trait.Trig.html
examples/: getting_started.rs
image/: struct.Frames.html  struct.ImageBuffer.html  struct.Pixels.html
num_integer/: struct.IterBinomial.html
num_iter/: struct.Range.html  struct.RangeFrom.html  struct.RangeInclusive.html  struct.RangeStep.html  (+2 more)
src/: lib.rs  (+3 more)
(+257 files in other folders)
